tests/baselines/reference/jsFileCompilationLetDeclarationOrder2.errors.txt
tests/cases/compiler/a.ts(2,1): error TS2448: Block-scoped variable 'a' used before its declaration.


==== tests/cases/compiler/a.ts (1 errors) ====
    let b = 30;
    a = 10;
    ~
!!! error TS2448: Block-scoped variable 'a' used before its declaration.
!!! related TS2728 tests/cases/compiler/b.js:1:5: 'a' is declared here.
==== tests/cases/compiler/b.js (0 errors) ====
    let a = 10;
    b = 30;
    